<resources>

    <string name="app_name">AttrackPark</string>

    <string name="blank_field">blank field</string>
    <string name="action_settings">Settings</string>

    <string name="locate_user">Me localiser</string>

    <string name="search">Rechercher</string>
    <string name="title_search_fragment">Recherche</string>

    <string name="localisation">Localiser</string>
    <string name="description">Description</string>
    <string name="website_park">Voir le site officiel</string>
    <string name="title_activity_park">ParkActivity</string>

    <string name="hello_world">Hello world!</string>
    <string name="title_activity_map">MapActivity</string>
    <string name="title_activity_maps">Map</string>

    <string name="google_maps_key">AIzaSyB0SX9xlGMXscJ8PIlHZldYZMJL4qui6l4</string>
    <string name="title_activity_detail_park">DetailParkActivity</string>
    <string name="title_activity_test">test</string>

</resources>
