<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools" android:layout_width="match_parent"
    android:layout_height="match_parent" tools:context="fr.esiea.mobile.attrackpark.DetailPark">

    <GridLayout
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:columnCount="2"
        android:layout_marginBottom="10dp"
        android:id="@+id/grid_detail">

        <ImageView
            android:layout_width="170dp"
            android:layout_height="170dp"
            android:src="@drawable/logo"
            android:layout_column="0"
            android:id="@+id/photo_park_detail"/>

        <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/localisation"
            android:textSize="20dp"
            android:layout_gravity="center_horizontal|center_vertical"
            android:textColor="@color/black"
            android:id="@+id/locate_park_detail"/>

    </GridLayout>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/description"
        android:layout_below="@id/grid_detail"
        android:textSize="30dp"
        android:layout_marginBottom="10dp"
        android:id="@+id/description_title_detail"/>

    <TextView
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:text="@string/blank_field"
        android:layout_below="@id/description_title_detail"
        android:textSize="20dp"
        android:layout_marginBottom="10dp"
        android:id="@+id/description_detail"/>

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/description_detail"
        android:layout_centerHorizontal="true"
        android:text="@string/website_park"
        android:id="@+id/url_website_detail"/>

</RelativeLayout>
