<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools" android:layout_width="match_parent"
    android:layout_height="match_parent" android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:paddingBottom="@dimen/activity_vertical_margin" tools:context=".MainActivity">

    <RelativeLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerVertical="true"
        android:layout_centerHorizontal="true">

        <TextView android:text="@string/app_name"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerHorizontal="true"
            android:textSize="50dp"
            android:textColor="@color/black"
            android:textStyle="bold"
            android:id="@+id/title_main"/>

        <ImageView
            android:layout_width="100dp"
            android:layout_height="150dp"
            android:layout_centerHorizontal="true"
            android:layout_below="@id/title_main"
            android:src="@drawable/logo"
            android:id="@+id/logo_main"/>

        <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/search"
            android:textSize="30dp"
            android:ems="8"
            android:layout_centerHorizontal="true"
            android:layout_below="@id/logo_main"
            android:id="@+id/search_button_main"/>

        <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/locate_user"
            android:textSize="30dp"
            android:ems="8"
            android:layout_centerHorizontal="true"
            android:layout_below="@id/search_button_main"
            android:id="@+id/location_button_main"/>

    </RelativeLayout>


</RelativeLayout>
